--- a/Principal.css
+++ b/Principal.css
@@ -5,7 +5,8 @@
 body {
  
   
-    background:linear-gradient(rgb(25, 32, 31),rgb(10, 34, 23));
+    background:linear-gradient(rgb(29, 36, 34),rgb(12, 36, 25));
+    margin: 0%;
     
    
     color: aliceblue;
@@ -20,8 +21,8 @@ body {
 #menu{
     list-style-type: none;
     padding: 0%;
-    background-color: rgb(29, 139, 78);
-    margin-bottom: 10px;
+    background:linear-gradient(rgba(28, 190, 63, 0.829),rgba(29, 110, 74, 0.644));
+    margin-bottom: 3px;
 }
 #menu li {
     display: inline;
@@ -35,14 +36,25 @@ body {
     display: inline-block;
 }
 #menu li a:hover{
-    background-color: rgb(214, 134, 36);
+    background-color: rgb(204, 132, 44);
 }
 
 #di {
    
-    background:linear-gradient(rgb(32, 32, 32),rgba(32, 138, 67, 0.404));
+    background:linear-gradient(rgb(32, 32, 32),rgba(32, 138, 67, 0.26));
     
     display: inline-block;
     padding: 1px;
     padding-left: 8px;
 }
+.imag{
+   border: 0px;
+   margin-top: 0%;
+   margin-bottom: 0%;
+
+
+}
+
+
+
+
