--- a/cadastro.css
+++ b/cadastro.css
@@ -55,7 +55,7 @@ form .dados input{
    
 }
 
-form .dados button{
+form .dados button, a{
     width: 100%;
     height: 47px;
     background: #14ac58;
@@ -63,6 +63,7 @@ form .dados button{
     margin-top: 15px;
     color: rgb(233, 225, 225);
     font-size: 16px;
+    text-decoration: none;
 }
 
 
