--- a/Principal.css
+++ b/Principal.css
@@ -86,7 +86,7 @@ body {
 .cxPrincipal {
     display: inline-block;
     width: 100%;
-    height: 250px;
+    height: 255px;
 }
 
 .copa {
@@ -121,16 +121,16 @@ body {
 .jogos {
     background-color: rgba(128, 128, 128, 0.603);
     display: inline-block;
-    width: 250px;
+    width: 22.9%;
     height: 130px;
     border-radius: 10px;
     margin: 10px;
 }
 
 .cxTimes {
-    width: 247px;
+    width: 100%;
     height: 100px;
-    margin-left: 2px;
+    margin-left: 3px;
 }
 
 .hor {
