--- a/Principal.css
+++ b/Principal.css
@@ -226,24 +226,151 @@ button:hover {
  
    }
  
-   #radio1:checked ~ .first{
-     margin-left: 0%;
-   }
-   #radio2:checked ~ .first{
-     margin-left: -25%;
-   }
-   #radio3:checked ~ .first{
-     margin-left: -50%;
-   }
-   #radio4:checked ~ .first{
-     margin-left: -75%;
-   }
+#radio1:checked ~ .first{
+    margin-left: 0%;
+}
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
+#radio3:checked ~ .first{
+    margin-left: -50%;
+}
+#radio4:checked ~ .first{
+    margin-left: -75%;
+}
  
- 
- 
- 
- 
- 
- 
- 
+.aovivo {
+    background-color: #007bff;
+    display: block;
+    width: 100%;
+    height: 300px;
+}
 
+.linha {
+    background-color: aqua;
+    display: block;
+    width: 100%;
+    height: 30%;
+    border: 1px solid rgb(87, 87, 87);
+}
+
+.aovivoCx {
+    background-color: brown;
+    display: inline-block;
+    width: 55%;
+    height: 100%;
+    border-right: 1px solid rgb(87, 87, 87);
+}
+
+.aovivoTimes {
+    background-color: blueviolet;
+    display: inline-block;
+    width: 49.4%;
+    height: 65%;
+    padding-top: 10px;
+    padding-left: 20px;
+    font-size: 13px;
+}
+
+.aovivoPlacar {
+    background-color: chartreuse;
+    display: inline-block;
+    width: 49.4%;
+    height: 65%;
+    padding-top: 10px;
+    padding-left: 20px;
+    font-size: 13px;
+    text-align: end;
+}
+
+.aovivoHora {
+    background-color: chocolate;
+    display: block;
+    width: 49.4%;
+    height: 32%;
+    padding-left: 20px;
+    font-size: 10px;
+}
+ 
+.aovivoBotoes {
+    background-color: darkblue;
+    display: inline-block;
+    width: 485px;
+    height: 75px;
+}
+ 
+.aovivoBotoes button {
+    background-color: #fff;
+    display: inline;
+    width: 32.7%;
+    height: 60px;
+    text-align: center;
+}
+ 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid gray;
+    background:linear-gradient(rgb(32, 32, 32),rgba(32, 138, 67, 0.404));
+}
+
+th, td {
+    border: 1px ;
+    text-align: center;
+    width: 14.3%;
+    height: 50px;
+    padding: 8px;
+}
+
+th {
+    font-weight: bold;
+}
+
+.botao button{
+    width: 100%;
+    height: 100%;
+    color: aliceblue;
+    text-align: center;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgba(128, 128, 128, 0);
+
+}
+.botao button:hover {
+    background-color: black;
+}
+
+footer{
+    width: 100%;
+    min-height: 50px;
+    display: flex;
+    background-color: rgb(31, 32, 34);
+    border-top: 3px solid rgb(5, 177, 111);
+}
+   
+footer .boxs{
+    width: 620px;
+    min-height: 150px;
+    padding: 20px;
+}
+
+.boxs ul li{
+   list-style: none;
+}
+   
+.boxs li{
+    color: rgb(104, 110, 109);
+}
+   
+.imgseguranca{
+    display: flex;
+    margin-left: 123px;
+    height: 47px;
+    width: auto;
+}
+   
+.rodape{
+    background-color:rgb(31, 32, 34) ;
+}
