--- a/cadastro.css
+++ b/cadastro.css
@@ -38,7 +38,7 @@ form .dados{
     margin-bottom: 15px;
 }
 form .dados label{
-    color: #3D3D3D;
+    color: rgb(26, 204, 64);
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
@@ -55,14 +55,19 @@ form .dados input{
    
 }
 
-form .dados button, a{
+form .dados button{
     width: 100%;
     height: 47px;
-    background: #14ac58;
+    background: rgba(71, 255, 108, 0.473);
     border-radius: 20px;
     margin-top: 15px;
-    color: rgb(233, 225, 225);
+    color: black;
     font-size: 16px;
+    text-decoration: none;
+}
+
+form .dados a{
+    color: black;
     text-decoration: none;
 }
 
