--- a/cadastro.css
+++ b/cadastro.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background:linear-gradient(rgb(26, 204, 64),rgba(58, 160, 92, 0.658));
+    background:linear-gradient(rgb(32, 32, 32),rgb(17, 72, 35));
  
     display: flex;
     justify-content: center;
@@ -38,10 +38,11 @@ form .dados{
     margin-bottom: 15px;
 }
 form .dados label{
-    color: rgb(26, 204, 64);
+    color: rgb(12, 36, 25);
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
+    font-size: 16px;
 }
 form .dados input{
     width: 100%;
@@ -58,7 +59,7 @@ form .dados input{
 form .dados button{
     width: 100%;
     height: 47px;
-    background: rgba(71, 255, 108, 0.473);
+    background: rgb(32, 138, 67);
     border-radius: 20px;
     margin-top: 15px;
     color: black;
