--- a/cadastro.css
+++ b/cadastro.css
@@ -71,5 +71,20 @@ form .dados a{
     color: black;
     text-decoration: none;
 }
+.valid {
+    color: green;
+}
+.invalid {
+    
+    color: red;
+}
+
+.valid1 {
+    color: green;
+}
+.invalid1 {
+    
+    color: red;
+}
 
 
