--- a/mines.css
+++ b/mines.css
@@ -1,3 +1,11 @@
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(5px); }
+    50% { transform: translateX(-5px); }
+    75% { transform: translateX(5px); }
+    100% { transform: translateX(0); }
+}
+
 #campo {
     display: grid;
     grid-template-columns: repeat(5, 90px);
@@ -13,30 +21,34 @@
     height: 110px;
     text-align: center;
     padding: 0px;
-    background-color: aliceblue;
-    border: 5px solid;
-    border-radius: 100px;
+    background-color: rgba(240, 248, 255, 0.5);
+    border: 2px solid;
+    border-radius: 28px;
+    cursor: pointer;
 }
 
 #saldo {
     display: flex;
     width: 40%;
     margin: 0px 0% 30px 30%;
-    height: 60px;
+    height: 50px;
     padding: 13px 70px;
     background-color: aliceblue;
-    border: 4px solid;
+    border: 2px solid;
     color: black;
     border-color: #1cb01f;
+    border-radius: 10px;
+  
 }
 
 #saldoAtual {
     width: 40%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.315);
-    margin: 1% 0% 0% 25%;
-    border-radius: 100px;
-    padding-left: 15px;
+    margin: 0% 0% 0% 25%;
+    border-radius: 2px;
+    padding-left: 1px;
+   
 }
 
 .celula {
@@ -49,6 +61,9 @@
     cursor: pointer;
     background: url('imagens/LogoS.png') center/cover;
     background-size: contain;
+}
+.celula:hover {
+    animation: shake 0.5s;
 }
 
 .celula.revelar {
@@ -66,8 +81,8 @@
     text-align: center;
     padding: 0px;
     background-color: rgba(29, 110, 74, 0.644);
-    border: 4px solid;
-    border-radius: 100px;
+    border: 2px solid;
+    border-radius: 28px;
 }
 
 #valorSaque {
@@ -80,12 +95,12 @@
 
 #aposta {
     width: 30%;
-    margin: 0px 0% 30px 2%;
+    margin: 0px 0% 68px 2%;
     height: 90px;
     padding: 0px;
     background-color: black;
-    border: 4px solid;
-    border-radius: 100px;
+    border: 2px solid;
+    border-radius: 28px;
 }
 
 #controleAposta {
