--- a/cadastro.css
+++ b/cadastro.css
@@ -62,9 +62,22 @@ form .dados input{
     border: 2px solid transparent;
     padding: 15px;
     font-size: 15px;
-    color: #616161;
-   
+    color: #616161;   
 }
+
+.formulario .btn-cadastro {
+    width: 100%;
+    height: 47px;
+    background: rgb(32, 138, 67);
+    border: 2px solid;
+    border-radius: 20px;
+    margin-top: 15px;
+    padding: 0px;
+    color: black;
+    font-size: 16px;
+    text-decoration: none;
+}
+
 
 form .dados button{
     width: 100%;
@@ -97,4 +110,10 @@ form .dados a{
     color: red;
 }
 
-
+.formulario p{
+    color: rgb(12, 36, 25);
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
